# audiobook-tagger-refactored

./: .gitignore  Dockerfile.dev  Makefile  README.md  docker-compose.yml  dockerignore  index.html  package-lock.json  package.json  vite.config.js
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: App.jsx  Cargo.toml  abs_cache.rs  age_rating_resolver.rs  audible.rs  audible_auth.rs  book_dna.rs  cache.rs  chapters.rs  config.rs  cover_art.rs  file_rename.rs  folder_fixer.rs  folder_watcher.rs  genre_cache.rs  genres.rs  gpt_consolidated.rs  lib.rs  main.rs  metadata.rs  normalize.rs  ollama.rs  ollama_manager.rs  processor.rs  progress.rs  scanner.rs  series.rs  series_resolver.rs  smart_rename.rs  tag_inspector.rs  tags.rs  title_resolver.rs  whisper.rs  whisper_local.rs
src-tauri/src/alignment/: aeneas.rs  mod.rs  queue.rs
src-tauri/src/commands/: abs.rs  abs_cache.rs  age_rating.rs  alignment.rs  audible.rs  authors.rs  book_dna.rs  bulk_covers.rs  chapters.rs  classify.rs  config.rs  covers.rs  export.rs  gather.rs  genres.rs  isbn.rs  maintenance.rs  mod.rs  ollama.rs  pipeline.rs  rename.rs  scan.rs  series_analysis.rs  tags.rs  title_resolver.rs  validation.rs
src-tauri/src/epub/: mod.rs  parser.rs
src-tauri/src/pipeline/: decide.rs  mod.rs  types.rs  validate.rs
src-tauri/src/scanner/: collector.rs  mod.rs  processor.rs  types.rs
src-tauri/src/validation/: authors.rs  lookups.rs  mod.rs  series.rs  (+1 more)
src-tauri/todos/: whisper-narrator-detection.md
(+64 files in other folders)
