[package]
name = "audiobook-tagger"
version = "1.0.0"
description = "Professional audiobook metadata management"
authors = ["Your Name"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
num_cpus = "1"
dirs = "5"
walkdir = "2"
lofty = "0.19"
regex = "1"
reqwest = { version = "0.12.24", features = ["json"] }
lazy_static = "1.5.0"
urlencoding = "2.1.3"
once_cell = "1.21.3"
futures = "0.3"
indicatif = "0.17"
sled = "0.34"
bincode = "1.3"
uuid = { version = "1.18.1", features = ["v4"] }
